src/test/ui/huge-array-simple.stderr
error: the type `[u8; N]` is too big for the current architecture
  --> $DIR/huge-array-simple.rs:12:9
   |
LL |     let _fat : [u8; (1<<61)+(1<<31)] =
   |         ^^^^

error: aborting due to previous error

